--- a/attoparsec-expr.cabal
+++ b/attoparsec-expr.cabal
@@ -1,26 +1,28 @@
-Name:             attoparsec-expr
-Version:          0.1
-Description:      Port of parsec's expression parser to attoparsec.
-Synopsis:         Port of parsec's expression parser to attoparsec.
-Category:         Text, Parsing
-License:          BSD3
-License-file:     LICENSE
-Author:           Daan Leijen, Paolo Martini
-Maintainer:       Sebastiaan Visser <haskell@fvisser.nl>
-Build-Type:       Simple
-Cabal-Version:    >= 1.6
+name:                attoparsec-expr
+version:             0.1.1
+description:         Port of parsec's expression parser to attoparsec.
+synopsis:            Port of parsec's expression parser to attoparsec.
+category:            Text, Parsing
+license:             BSD3
+license-file:        LICENSE
+author:              Daan Leijen, Paolo Martini
+maintainer:          Silk <code@silk.co>
+build-type:          Simple
+cabal-version:       >= 1.6
 
-Library
-  GHC-Options:      -Wall
-  HS-Source-Dirs:   src
+extra-source-files:
+  CHANGELOG.md
+  LICENSE
+  README.md
 
+source-repository head
+  type:              git
+  location:          https://github.com/silkapp/attoparsec-expr
+
+library
+  ghc-options:       -Wall
+  hs-source-dirs:    src
+  exposed-modules:   Data.Attoparsec.Expr
   Build-Depends:
-      base       == 4.*
+      base == 4.*
     , attoparsec >= 0.10 && < 0.13
-
-  Exposed-modules:  Data.Attoparsec.Expr
-
-Source-repository head
-  type:     git
-  location: https://github.com/sebastiaanvisser/attoparsec-expr
-
